--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
     "rules": {
         "linebreak-style": ["error", "windows"],
         "no-console": "off",
+        "no-nested-ternary": "off",
         "class-methods-use-this": "error"
     }
 }
